# Microwave-Open-Source

./: .gitignore  CMakeLists.txt  README.md  framestage.cpp  main.cpp  main.h  painttraverse.cpp
Drawings/: drawings.cpp  drawings.h
Hacks/: hacks.h
Hooks/: framestage.cpp  index.h  painttraverse.cpp
Interfaces/: hooks.cpp  hooks.h  interfaces.cpp  interfaces.h
SDK/: C_BaseEntity.h  Others.h  Vector.h  offsets.cpp  offsets.h
Utils/: netvarmanager.cpp
